--- a/www/index.html
+++ b/www/index.html
@@ -10,14 +10,14 @@
     <title>CarsApp</title>
     
     <!-- Styles -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/framework7/1.3.1/css/framework7.ios.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/framework7/1.3.1/css/framework7.ios.colors.min.css">
+    <link rel="stylesheet" href="framework7/css/framework7.ios.min.css">
+    <link rel="stylesheet" href="framework7/css/framework7.ios.colors.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/ionicons.min.css">
 
     <!-- Scripts -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/framework7/1.3.1/js/framework7.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="framework7/js/framework7.min.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/service/InitService.js"></script>
     <script type="text/javascript" src="js/controller/ListController.js"></script>
